--- a/docs/assets/landing.css
+++ b/docs/assets/landing.css
@@ -7,8 +7,8 @@
 
 #main {
   display: none !important;
-  width: 80%;
   max-width: 900px;
+  padding: 0 2em;
   margin: 0 auto;
   font-size: 16px;
   font-family: "Helvetica Neue", "Microsoft Yahei", sans-serif;
@@ -23,27 +23,18 @@
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-  #main {
-    font-size: 12px;
-    text-align: left;
-  }
-
-  #hero {
-    padding-top: 4em;
-  }
-}
-
 #hero canvas {
   width: 100%;
   cursor: pointer;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #hero h2 {
   color: #aaa;
   font-size: 1.5em;
   font-weight: normal;
+  text-transform: capitalize;
 }
 
 #hero pre {
@@ -111,13 +102,6 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 600px) {
-  .card {
-    float: none;
-    width: 100%;
-  }
-}
-
 .card h3 {
   color: #666;
   font-size: 1.5em;
@@ -157,4 +141,29 @@
   position: absolute;
   top: 1em;
   left: 1em;
+}
+
+@media screen and (max-width: 768px) {
+  #main {
+    font-size: 14px;
+    text-align: left;
+  }
+
+  #hero {
+    padding-top: 4em;
+  }
+
+  #hero h2 {
+    text-align: left;
+  }
+
+  #landing-buttons a {
+    font-size: 12px;
+  }
+
+  .card {
+    float: none;
+    width: 100%;
+    padding: 0;
+  }
 }
