update(docs): update font face

--- a/docs/assets/override.css
+++ b/docs/assets/override.css
@@ -1,6 +1,6 @@
 /* Override default styles of docute */
 body {
-  font-family: "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  font-family: "Open Sans", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 
 .sidebar-heading-anchor.active,
